--- a/build.gradle
+++ b/build.gradle
@@ -62,11 +62,16 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenLocal()
-    maven { url = "https://maven.minecraftforge.net/" }
+    maven {
+        url "https://www.cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
-    implementation "net.neoforged:neoforge:${"21.11.38-beta"}"
+    implementation "net.neoforged:neoforge:21.1.38"
     implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
 }
 
