--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -22,3 +22,10 @@ description='''${mod_description}'''
     versionRange="[${minecraft_version},)"
     ordering="NONE"
     side="BOTH"
+
+[[dependencies.beer_snacks]]
+    modId="terrablender"
+    type="required"
+    versionRange="[4.1.0.8,)"
+    ordering="BEFORE"
+    side="BOTH"
