--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,6 @@ plugins {
     id 'net.neoforged.moddev' version '2.0.71'
 }
 
-// Load local.properties if it exists
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file('local.properties')
-if (localPropertiesFile.exists()) {
-    localProperties.load(new FileInputStream(localPropertiesFile))
-    localProperties.each { prop ->
-        project.extensions.extraProperties.set(prop.key, prop.value)
-    }
-}
-
 version = mod_version
 group = mod_group_id
 
@@ -62,17 +52,9 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenLocal()
-    maven {
-        url "https://www.cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
 }
 
 dependencies {
-    implementation "net.neoforged:neoforge:21.1.38"
-    implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21.1-4.1.0.8"
 }
 
 tasks.withType(ProcessResources).configureEach {
@@ -114,24 +96,11 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-// Custom task for local development to copy JAR to mods folder
-tasks.register('copyJar', Copy) {
-    dependsOn 'jar'
-    
-    // Check local.properties or gradle.properties for mod_dest_dir
-    def destDir = project.findProperty('mod_dest_dir')
-    
-    if (destDir) {
-        from jar.archiveFile
-        into destDir
-        
-        doLast {
-            println "Successfully copied ${jar.archiveFileName.get()} to ${destDir}"
-        }
-    }
-}
 
-// Make build task depend on copyJar so it runs automatically
-tasks.named('build') {
-    finalizedBy 'copyJar'
+tasks.register('copyJar', Copy) {
+    from jar.archiveFile
+    into "C:/Users/AlexanderXDi/AppData/Roaming/PrismLauncher/instances/1.21.1/minecraft/mods"
+    rename { String fileName -> "${mod_name}.jar" }
 }
+build.finalizedBy(copyJar)
+
