--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,5 @@ mod_group_id=mopk.beer_snacks
 mod_authors=Mopk
 mod_description=Different food.
 mod_license=MIT
+terrablender_version=4.1.0.8
 # Recommended gradle version: 8.10.2
