--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,12 @@ neoForge {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    mavenLocal()
+    maven { url "https://maven.neoforged.net/releases" }
+    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
 }
 
 dependencies {
+    implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21-4.1.0.8"
 }
 
 tasks.withType(ProcessResources).configureEach {
