--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'net.neoforged.moddev' version '2.0.71'
+    id 'net.neoforged.gradle.neoforge' version '7.0.113'
 }
 
 version = mod_version
@@ -51,12 +52,17 @@ neoForge {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven { url "https://maven.neoforged.net/releases" }
+    maven { url = "https://maven.neoforged.net/#/" }
     maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+    maven { url = "https://www.cursemaven.com" }
+    maven { url = "https://maven.minecraftforge.net/" }
+    maven { url = "https://maven.blamejared.com" }
 }
 
 dependencies {
-    implementation "com.github.glitchfiend:TerraBlender-neoforge:1.21-4.1.0.8"
+    implementation "net.neoforged:neoforge:${neoforge_version}"
+    implementation "curse.maven:terrablender-neoforge-940057:6054947"
+    implementation fg.deobf(files('TerraBlender-neoforge-1.21.1-4.1.0.8.jar'))
 }
 
 tasks.withType(ProcessResources).configureEach {
