--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'net.neoforged.moddev' version '2.0.71'
-    id 'net.neoforged.gradle.neoforge' version '7.0.113'
 }
 
 version = mod_version
@@ -52,7 +51,8 @@ neoForge {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven { url = "https://maven.neoforged.net/#/" }
+    mavenLocal()
+    maven { url = "https://maven.neoforged.net/releases" }
     maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
     maven { url = "https://www.cursemaven.com" }
     maven { url = "https://maven.minecraftforge.net/" }
@@ -60,9 +60,9 @@ repositories {
 }
 
 dependencies {
-    implementation "net.neoforged:neoforge:${neoforge_version}"
     implementation "curse.maven:terrablender-neoforge-940057:6054947"
-    implementation fg.deobf(files('TerraBlender-neoforge-1.21.1-4.1.0.8.jar'))
+    // TerraBlender
+    implementation files('TerraBlender-neoforge-1.21.1-4.1.0.8.jar')
 }
 
 tasks.withType(ProcessResources).configureEach {
@@ -105,9 +105,14 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 
+Properties localProperties = new Properties()
+if (project.rootProject.file('local.properties').exists()) {
+    localProperties.load(project.rootProject.file('local.properties').newDataInputStream())
+}
+
 tasks.register('copyJar', Copy) {
     from jar.archiveFile
-    into "C:/Users/AlexanderXDi/AppData/Roaming/PrismLauncher/instances/1.21.1/minecraft/mods"
+    into localProperties.getProperty('mod_dest_dir')
     rename { String fileName -> "${mod_name}.jar" }
 }
 build.finalizedBy(copyJar)
